# RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  config.py  create_missing_folders.sh  explo_docs.py  ingestion_pipeline.py  main.py  pyproject.toml  query_pipeline.py
__marimo__/session/: explo_docs.py.json
models/: README.md  download_embedding_model.py
notebooks/: chunking_benchmark.py  doc_viz.py  explo_docs.py  explo_output.py
scripts/: run_ingestion.py  run_query.py
scritps/: run_query.py
src/rag/: agent.py  config.py  data_model.py  data_models.py  ingestion_pipeline_helpers.py  query_pipeline_helpers.py
src/rag/ingestion/: helpers.py  pipeline.py
src/rag/query/: agent.py  build_dataset.py  helpers.py  merge.py  pipeline.py
