[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.19.0",
    "ipython>=9.11.0",
    "lancedb>=0.29.2",
    "marimo>=0.20.4",
    "matplotlib>=3.10.8",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "pydantic-ai-slim[openai]>=1.68.0",
    "sentence-transformers>=5.3.0",
]
